loading, modals and empty content

--- a/src/components/ListDriverItem/index.styl
+++ b/src/components/ListDriverItem/index.styl
@@ -17,3 +17,22 @@ button.icon
 
     .title
         font-weight bold
+
+.modal-inactive
+    .btn-inactive 
+        background-color: #fff
+        border: 1px solid #000
+        color: #000
+
+        &:hover
+            background-color: #000
+            color: #fff
+
+    .btn-cancel
+        background-color #fff
+        border-color: #6c757d
+        color: #6c757d
+
+        &:hover
+            background-color: #6c757d
+            color: #fff
