--- a/src/pages/List/index.styl
+++ b/src/pages/List/index.styl
@@ -54,3 +54,10 @@
 
     input, select 
         border: 1px solid #000
+
+.loading
+    .spinner-border
+        width: 3rem;
+        height: 3rem;
+        margin: 40px auto;
+        display: block;
