--- a/src/components/ListDrivers/index.styl
+++ b/src/components/ListDrivers/index.styl
@@ -23,3 +23,7 @@ table.list-drivers
         border-color: #ffd538
         border: 1px solid #ffd538
         color: #000
+
+.not-found
+    width: 90%;
+    margin: 30px auto;
